[package]
name = "bagger"
version = "0.0.1"
edition = "2021"

authors = ["Ivan Mironov <mironov.ivan@gmail.com>"]
description = "Better miner for ORE (on Solana)"
license = "Apache-2.0"
repository = "https://github.com/im-0/bagger"
readme = "README.md"
keywords = [
    "cli",
]
categories = [
    "command-line-utilities",
]

[dependencies.anyhow]
version = "1.0.82"
default_features = false
features = ["std"]

[dependencies.bincode]
version = "1.3.3"
default_features = false

[dependencies.bytemuck]
version = "1.15.0"
default_features = false
features = ["derive"]

[dependencies.chrono]
version = "0.4.38"
default_features = false
features = ["alloc", "clock", "std"]

[dependencies.clap]
version = "4.5.4"
default_features = false
features = ["cargo", "color", "derive", "error-context", "help", "std", "usage", "wrap_help"]

[dependencies.jsonrpsee]
version = "0.20.3"
default_features = false
features = [
    "async-client",
    "client-ws-transport-no-tls",
    "macros",
    "server",
    "ws-client",
]

[dependencies.linked_hash_set]
version = "0.1.4"
default_features = false

[dependencies.lru]
version = "0.12.0"
default_features = false

[dependencies.num_cpus]
version = "1.16.0"
default_features = false

[dependencies.futures]
version = "0.3.30"
default_features = false

[dependencies.hex]
version = "0.4.3"
default_features = false
features = ["std"]

[dependencies.nonzero_lit]
version = "0.1.2"
default_features = false
features = []

[dependencies.rand_chacha]
version = "0.2.2"
default_features = false
features = ["std"]

[dependencies.random-pick]
version = "1.2.16"
default_features = false

[dependencies.serde]
version = "1.0.197"
default_features = false

[dependencies.serde_derive]
version = "1.0.197"
default_features = false

[dependencies.solana-account-decoder]
version = "1.18.11"
default_features = false

[dependencies.solana-client]
version = "1.18.11"
default_features = false

[dependencies.solana-program]
version = "1.18.11"
default_features = false

[dependencies.solana-sdk]
version = "1.18.11"
default_features = false
features = ["full"]

[dependencies.solana-transaction-status]
version = "1.18.11"
default_features = false

[dependencies.spl-associated-token-account]
version = "3.0.2"
default_features = false
features = ["no-entrypoint"]

[dependencies.spl-token]
version = "4.0.0"
default_features = false

[dependencies.tempfile]
version = "3.10.1"
default_features = false

[dependencies.thiserror]
version = "1.0.24"
default_features = false

[dependencies.tokio]
version = "1.37.0"
default_features = false
features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "rt",
    "signal",
    "sync",
    "time",
]

[dependencies.tracing]
version = "0.1.40"
default_features = false
features = ["std", "max_level_trace", "release_max_level_debug"]

[dependencies.tracing-core]
version = "0.1.32"
default_features = false
features = ["std"]

[dependencies.tracing-log]
version = "0.2.0"
default_features = false
features = ["log-tracer", "std"]

[dependencies.tracing-subscriber]
version = "0.3.18"
default_features = false
features = [
    "ansi",
    "chrono",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
]

[patch.crates-io]
#
# === zeroize versioning issues ===
#
# A number of packages used explicit upper bound on the `zeroize` package, such
# as `>=1, <1.4`.  The problem is that cargo still does not duplicate `zeroize`
# if a newer version is available and requested by another package and just
# fails the whole dependency resolution process.
#
# This is described in
#
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-requirements
#
# So we have to patch `zeroize` dependency specifications in the projects that
# introduce these constraints.  They have already removed these constraints in
# newer versions, but we have not updated yet.  As we update, we need to remove
# these patch requests.
#
# When our dependencies are upgraded, we can remove these patches.  Before that
# we might need to maintain these patches in sync with our full dependency tree.

# Our dependency tree has `aes-gcm-siv` v0.10.3 and the `zeroize` restriction
# was removed in the next commit just after the release.  So it seems safe to
# patch to this commit.
#
# `aes-gcm-siv` v0.10.3 release:
#
# https://github.com/RustCrypto/AEADs/releases/tag/aes-gcm-siv-v0.10.3
#
# Corresponds to commit
#
# https://github.com/RustCrypto/AEADs/commit/6f16f4577a1fc839a2346cf8c5531c85a44bf5c0
#
# Comparison with `6105d7a5591aefa646a95d12b5e8d3f55a9214ef` pinned here:
#
# https://github.com/RustCrypto/AEADs/compare/aes-gcm-siv-v0.10.3..6105d7a5591aefa646a95d12b5e8d3f55a9214ef
#
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

# Our dependency tree has `curve25519-dalek` v3.2.1.  They have removed the
# constraint in the next major release. The commit that removes the `zeroize`
# constraint was added to multiple release branches, but not to the 3.2 branch.
#
# `curve25519-dalek` maintainers are saying they do not want to invest any more
# time in the 3.2 release:
#
# https://github.com/dalek-cryptography/curve25519-dalek/issues/452#issuecomment-1749809428
#
# So we have to fork and create our own release, based on v3.2.1, with the
# commit that removed `zeroize` constraint on the `main` branch cherry-picked on
# top.
#
# `curve25519-dalek` v3.2.1 release:
#
# https://github.com/dalek-cryptography/curve25519-dalek/releases/tag/3.2.1
#
# Corresponds to commit
#
# https://github.com/dalek-cryptography/curve25519-dalek/commit/29e5c29b0e5c6821e4586af58b0d0891dd2ec639
#
# Comparison with `b500cdc2a920cd5bff9e2dd974d7b97349d61464`:
#
# https://github.com/dalek-cryptography/curve25519-dalek/compare/3.2.1...solana-labs:curve25519-dalek:b500cdc2a920cd5bff9e2dd974d7b97349d61464
#
# Or, using the branch name instead of the hash:
#
# https://github.com/dalek-cryptography/curve25519-dalek/compare/3.2.1...solana-labs:curve25519-dalek:3.2.1-unpin-zeroize
#
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
